--- a/simple/Vagrantfile
+++ b/simple/Vagrantfile
@@ -2,7 +2,7 @@
 # vi: set ft=ruby :
 
 Vagrant.configure("2") do |config|
-  config.vm.box = "hashicorp/precise64"
+  config.vm.box = "ubuntu/xenial64"
   # config.vm.box_url = "http://domain.com/path/to/above.box"
   # config.vm.network "forwarded_port", guest: 80, host: 8080
   # config.vm.network "public_network"
@@ -10,4 +10,16 @@ Vagrant.configure("2") do |config|
   # config.vm.synced_folder "../data", "/vagrant_data"
 
   config.vm.provision "shell", path: 'provision.sh'
+
+  # config.vm.provider "virtualbox" do |v|
+  #   v.name = "Vagrant Template"
+  #   v.gui = false
+  #   v.linked_clone = true
+  #   v.cpus = 2
+  #   v.memory = 1024
+  # end
+
+  # config.vm.provision "ansible" do |ansible|
+  #   ansible.playbook = "playbook.yml"
+  # end
 end
